--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -15,8 +15,59 @@ textarea {
 
 .center {
   text-align:center;
+  h1 {
+    margin-bottom:10px;
+  }
 }
 
-.center h1 {
-  margin-bottom:10px;
+#logo {
+  float: left;
+  margin-right: 10px;
+  font-size: 1.7em;
+  color: #fff;
+  text-transform: uppercase;
+  letter-spacing: -1px;
+  padding-top: 9px;
+  font-weight: bold;
+
+  &:hover {
+    color: #fff;
+    text-decoration: none;
+    }
+  }
+
+
+img {
+  // display:none;
+}
+
+
+/* footer */
+
+footer {
+  margin-top: 45px;
+  padding-top: 5px;
+  border-top: 1px solid #eaeaea;
+  color: $gray-light;
+
+  a {
+    color: #555;
+    &:hover {
+    color: #222;
+    }
+  }
+  small {
+    float: left;
+  }
+
+  ul {
+    float: right;
+    list-style: none;
+
+    li {
+      float: left;
+      margin-left: 15px;
+    }
+  }
+
 }
