--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -7,9 +7,9 @@
     sample application.
   </h2>
 
-  <%= link_to "Sign up now!", '#', class: "btn btn-lg btn-primary" %>
+  <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary " %>
 </div>
 
 <%= link_to image_tag("rails.png", alt: "Rails logo"), 'http://rubyonrails.org/' %>
 
-<%= link_to image_tag('kitten.jpg', alt: 'Rails Kitten'), 'https://rubyonrails.org/'%>
+<%# <%= link_to image_tag('kitten.jpg', alt: 'Rails Kitten'), 'https://rubyonrails.org/'<] %>
